<resources>

    <string name="app_name">BlackJack21</string>
    <string name="start_game">Start Game</string>
    <string name="scoreboard">ScoreBoard</string>
    <string name="quit">Quit</string>
    <string name="choosePlayer">Choose Player</string>
    <string name="newUser">Create Player</string>
    <string name="cogwheel_quit">Quit</string>
    <string name="newPlayer">New Player</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="new_userName">Name</string>
    <string name="clear_betText">Clear</string>
    <string name="deal_text">Deal</string>
    <string name="place_your_bet">Place Your Bet</string>
    <string name="current_player">Current Player:</string>
    <string name="cash">Cash:</string>
    <string name="split_text">Split</string>
    <string name="stand_text">Stand</string>
    <string name="hit_text">Hit</string>
    <string name="double_text">Double</string>
    <string name="tap_a_name_to_continue">Tap a name to continue</string>
    <string name="not_enough_money">Not enough money</string>
    <string name="name_is_taken">Name is taken</string>
    <string name="name_is_to_long">Name is to long</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="exit_game">Exit Game</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>



</resources>